[gd_scene load_steps=12 format=3 uid="uid://dmla031dku8le"]

[ext_resource type="Script" path="res://scripts/piece_manager.gd" id="1_luoh3"]
[ext_resource type="Texture2D" uid="uid://bvwn3pjlddmfm" path="res://assets/Cart.png" id="2_jfjte"]
[ext_resource type="Script" path="res://scripts/plate.gd" id="3_li54b"]
[ext_resource type="Texture2D" uid="uid://cqpvf6ol0iv1u" path="res://assets/board_tiles.png" id="4_vv0ft"]
[ext_resource type="Texture2D" uid="uid://b8yp3ihvvmub2" path="res://assets/plate_bg.png" id="5_sm288"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="6_efioj"]
[ext_resource type="Texture2D" uid="uid://dnol534vyevfq" path="res://assets/tablecloth.jpg" id="7_dkyu8"]
[ext_resource type="PackedScene" uid="uid://8tw50v3p23py" path="res://scenes/black.tscn" id="8_08eq8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8btvs"]
size = Vector2(600, 600)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o66xs"]
texture = ExtResource("4_vv0ft")
texture_region_size = Vector2i(60, 60)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-30, -30, 30, -30, 30, 30, -30, 30)
1:0/0/custom_data_0 = 1
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/custom_data_0 = 1
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/custom_data_0 = 1
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/custom_data_0 = 2
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/custom_data_0 = 3
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/custom_data_0 = 4
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/custom_data_1 = 3
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-30, -30, 30, -30, 30, 30, -30, 30)
2:3/0/custom_data_1 = 2
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-30, -30, 30, -30, 30, 30, -30, 30)
3:3/0/custom_data_1 = 1

[sub_resource type="TileSet" id="TileSet_fig5t"]
tile_size = Vector2i(60, 60)
physics_layer_0/collision_layer = 0
custom_data_layer_0/name = "scoring"
custom_data_layer_0/type = 2
custom_data_layer_1/name = "color"
custom_data_layer_1/type = 2
sources/1 = SubResource("TileSetAtlasSource_o66xs")

[node name="GameScreen" type="Node2D"]

[node name="MainCamera" type="Camera2D" parent="."]
anchor_mode = 0

[node name="PieceManager" type="Node2D" parent="."]
z_index = 2
z_as_relative = false
script = ExtResource("1_luoh3")

[node name="Cart" type="Sprite2D" parent="PieceManager"]
z_index = 1
position = Vector2(819, 108)
texture = ExtResource("2_jfjte")
centered = false

[node name="Plate" type="Area2D" parent="."]
z_index = 1
z_as_relative = false
position = Vector2(60, 60)
script = ExtResource("3_li54b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plate"]
position = Vector2(300, 300)
shape = SubResource("RectangleShape2D_8btvs")

[node name="PlateGrid" type="TileMap" parent="Plate"]
tile_set = SubResource("TileSet_fig5t")
cell_quadrant_size = 60
format = 2
layer_0/name = "base"
layer_0/z_index = 1
layer_1/name = "food"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 0.376471)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 5
layer_1/tile_data = PackedInt32Array()
layer_2/name = "overlay"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 0.752941)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 7
layer_2/tile_data = PackedInt32Array()

[node name="Sprite2D" type="Sprite2D" parent="Plate"]
texture = ExtResource("5_sm288")
centered = false
offset = Vector2(-20, -20)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("6_efioj")

[node name="PassButt" type="Button" parent="UI"]
offset_left = 1115.0
offset_top = 492.0
offset_right = 1239.0
offset_bottom = 569.0
theme_override_font_sizes/font_size = 50
disabled = true
text = "Next"

[node name="DoneButt" type="Button" parent="UI"]
offset_left = 1125.0
offset_top = 597.0
offset_right = 1224.0
offset_bottom = 674.0
theme_override_font_sizes/font_size = 50
text = "End"

[node name="Score" type="Label" parent="UI"]
offset_left = 822.0
offset_top = 16.0
offset_right = 1012.0
offset_bottom = 88.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Score: 0"

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("7_dkyu8")
expand_mode = 1
stretch_mode = 1

[node name="Black" parent="." instance=ExtResource("8_08eq8")]

[connection signal="input_event" from="Plate" to="Plate" method="_on_input_event"]
[connection signal="placed_piece" from="Plate" to="PieceManager" method="_on_plate_placed_piece"]
[connection signal="placed_piece" from="Plate" to="UI" method="_on_plate_placed_piece"]
[connection signal="score_bonus" from="Plate" to="Plate" method="_on_score_bonus"]
[connection signal="score_piece" from="Plate" to="UI" method="_on_plate_score_piece"]
[connection signal="pressed" from="UI/PassButt" to="PieceManager" method="_on_pass_butt_pressed"]
[connection signal="pressed" from="UI/DoneButt" to="UI" method="_on_done_butt_pressed"]
